--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-
+  <header> 
+    TESTE
   </header>
 
   <div class="app">
-    
+    <div class="product">
+     <img src="https://images-americanas.b2w.io/produtos/01/00/img/3234381/2/3234381205_1SZ.jpg" alt="">
+     <div class="description">
+      <p>
+        Smartphone Samsung Galaxy S20 Fe 128GB 4G Wi-Fi Tela 6.5'' 
+        Dual Chip 6GB RAM Câmera Tripla + Selfie 32MP - Cloud Navy
+      </p>
+     </div>
+    </div>
   </div>
 </body>
 </html>
