set products list

--- a/index.html
+++ b/index.html
@@ -14,14 +14,40 @@
 
   <div class="app">
     <div class="product">
-     <img src="https://images-americanas.b2w.io/produtos/01/00/img/3234381/2/3234381205_1SZ.jpg" alt="">
-     <div class="description">
-      <p>
-        Smartphone Samsung Galaxy S20 Fe 128GB 4G Wi-Fi Tela 6.5'' 
-        Dual Chip 6GB RAM Câmera Tripla + Selfie 32MP - Cloud Navy
-      </p>
-     </div>
+     <img src="https://images-americanas.b2w.io/produtos/01/00/img/3234381/2/3234381205_1GG.jpg" alt="">
+    <div class="content">
+      <div class="description">
+        <p>
+          Smartphone Samsung Galaxy S20 Fe 128GB 4G Wi-Fi Tela 6.5'' 
+          Dual Chip 6GB RAM Câmera Tripla + Selfie 32MP - Cloud Navy
+        </p>
+        <span class="price">
+          R$ 1200,00
+        </span>
+      </div>
+      <div class="line"></div>
+      <div class="informations">
+       <a href="">
+        Ver na loja
+       </a>
+      </div>
     </div>
+    </div>
+    <div class="product">
+      <img src="https://images-americanas.b2w.io/produtos/01/00/img/3234381/2/3234381205_1GG.jpg" alt="">
+     <div class="content">
+       <div class="description">
+         <p>
+           Smartphone Samsung Galaxy S20 Fe 128GB 4G Wi-Fi Tela 6.5'' 
+           Dual Chip 6GB RAM Câmera Tripla + Selfie 32MP - Cloud Navy
+         </p>
+         <span class="price">
+           R$ 1200,00
+         </span>
+       </div>
+       <div class="line"></div>
+     </div>
+     </div>
   </div>
 </body>
 </html>
