products list to mobile screen

--- a/index.html
+++ b/index.html
@@ -1,53 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <title>Oferta Quente</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  
+  <script src="/js/main.js" type="module" defer></script>
+
 </head>
 <body>
   <header> 
     TESTE
   </header>
-
   <div class="app">
-    <div class="product">
-     <img src="https://images-americanas.b2w.io/produtos/01/00/img/3234381/2/3234381205_1GG.jpg" alt="">
-    <div class="content">
-      <div class="description">
-        <p>
-          Smartphone Samsung Galaxy S20 Fe 128GB 4G Wi-Fi Tela 6.5'' 
-          Dual Chip 6GB RAM Câmera Tripla + Selfie 32MP - Cloud Navy
-        </p>
-        <span class="price">
-          R$ 1200,00
-        </span>
-      </div>
-      <div class="line"></div>
-      <div class="informations">
-       <a href="">
-        Ver na loja
-       </a>
-      </div>
-    </div>
-    </div>
-    <div class="product">
-      <img src="https://images-americanas.b2w.io/produtos/01/00/img/3234381/2/3234381205_1GG.jpg" alt="">
-     <div class="content">
-       <div class="description">
-         <p>
-           Smartphone Samsung Galaxy S20 Fe 128GB 4G Wi-Fi Tela 6.5'' 
-           Dual Chip 6GB RAM Câmera Tripla + Selfie 32MP - Cloud Navy
-         </p>
-         <span class="price">
-           R$ 1200,00
-         </span>
-       </div>
-       <div class="line"></div>
-     </div>
-     </div>
+    
   </div>
 </body>
 </html>
