--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <header> 
-    TESTE
+    <img src="./images/logo-sem-fundo.ico" alt="">
   </header>
   <div class="app">
     
