--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   
   <title>Oferta Quente</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/790d2d7c83.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   
   <script src="/js/main.js" type="module" defer></script>
