✨ feat; add a search filter

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 <body>
   <header> 
     <img src="./images/logo-sem-fundo.ico" alt="">
+    <div class="search">
+      <input type="text" placeholder="Digite sua pesquisa">
+      <button class="searchButton" type="button">
+        <i class="fa-solid fa-magnifying-glass fa-2x"></i>
+      </button>
+    </div>
   </header>
   <div class="app">
   </div>
