🚧 wip: change styles in page

--- a/index.html
+++ b/index.html
@@ -18,14 +18,73 @@
 </head>
 <body>
   <header> 
-    <img src="./images/logo-sem-fundo.ico" alt="">
-    <div class="search">
-      <input type="text" placeholder="Digite sua pesquisa">
-      <button class="searchButton" type="button">
-        <i class="fa-solid fa-magnifying-glass fa-2x"></i>
-      </button>
-    </div>
+   <div class="top">
+      <img src="./images/oferta quente branco.png" alt="">
+      <div class="search">
+        <input type="text" placeholder="Digite sua pesquisa">
+        <button class="searchButton" type="button">
+          <i class="fa-solid fa-magnifying-glass fa-2x"></i>
+        </button>
+      </div>
+   </div>
+   <div class="bottom">
+    <ul>
+      <li>
+        <a href="#">
+          <i class="fa-solid fa-house"></i>
+         <span>casa</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa-solid fa-kitchen-set"></i>
+         <span> cozinha</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa-solid fa-desktop"></i>
+         <span> eletrônicos </span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa-solid fa-couch"></i>
+         <span> moveis </span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa-solid fa-shirt"></i>
+         <span> moda  </span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa-solid fa-stethoscope"></i>
+         <span> saudê</span>
+        </a>
+      </li>
+
+      <li>
+        <a href="#">
+          <i class="fa-solid fa-book"></i>
+         <span> entretimento </span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa-solid fa-couch"></i>
+         <span> limpeza <cozinha/span>
+        </a>
+      </li>
+      
+    </ul>
+   </div>
   </header>
+  <div class="banner">
+    <h1>AREA BANNER</h1>
+  </div>
   <div class="app">
   </div>
 </body>
